Remove deprecated options from tests